--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 :root {
   --text-color: #e87d25;
@@ -110,6 +110,7 @@ p {
 .header {
   border-bottom: 1px solid var(--text-color);
   padding: 20px 30px;
+  font-size: 18px;
 }
 .header .header-container {
   max-width: 1500px;
@@ -133,57 +134,64 @@ p {
 }
 .header .header-container .header-logo .header-logo__text span {
   color: rgb(86, 86, 86);
+  font-weight: 500;
 }
 .header .header-container .header-block {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 70px;
 }
 .header .header-container .header-block .header-contacts {
-  font-size: 18px;
+  display: flex;
+  gap: 40px;
 }
-.header .header-container .header-block .header-contacts .header-contacts__item:not(:first-child) {
-  margin-top: 5px;
+.header .header-container .header-block .header-contacts__item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.header .header-container .header-block .header-contacts__item svg {
+  width: 1em;
+  fill: var(--text-color);
 }
 .header .header-container .header-block .header-language {
   cursor: pointer;
   position: relative;
   z-index: 15;
-  width: 50px;
-  text-align: center;
-  /* Стиль выбранного элемента */
+}
+.header .header-container .header-block .header-language__main {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.header .header-container .header-block .header-language__main svg {
+  width: 1em;
+  fill: var(--text-color);
+  transition: 0.2s;
 }
 .header .header-container .header-block .header-language .header-language__items {
   display: none;
-  width: 50px;
   position: absolute;
-  top: 100%;
-  left: 0;
   margin-top: 5px;
-  background-color: black;
-  border: 1px solid var(--text-color);
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-.header .header-container .header-block .header-language .header-language__items.open {
-  display: block;
-  position: absolute;
+  background-color: #000;
 }
 .header .header-container .header-block .header-language .header-language__items .header-language__item {
+  border: 1px solid var(--text-color);
   cursor: pointer;
   padding: 8px 14px;
   transition: background-color 0.3s ease;
 }
 .header .header-container .header-block .header-language .header-language__items .header-language__item:hover {
-  background-color: #2e2929;
+  background-color: #131212;
 }
-.header .header-container .header-block .header-language .header-language__selected {
-  cursor: pointer;
-  padding: 8px 14px;
-  background-color: black;
-  border: 1px solid var(--text-color);
-  border-radius: 4px;
-  user-select: none;
+.header .header-container .header-block .header-language .header-language__items .header-language__item:not(:last-child) {
+  border-bottom: 1px;
+}
+.header .header-container .header-block .header-language.open .header-language__items {
+  display: block;
+}
+.header .header-container .header-block .header-language.open svg {
+  transform: rotateX(180deg);
 }
 
 .navigation {
