--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 $maxWidth: 1680;
@@ -136,6 +136,8 @@ p {
 .header {
     border-bottom: 1px solid var(--text-color);
     padding: 20px 30px;
+    font-size: 18px;
+
     .header-container {
         max-width: 1500px;
         margin: 0 auto;
@@ -159,6 +161,7 @@ p {
 
                 span {
                     color: rgb(86, 86, 86);
+                    font-weight: 500;
                 }
             }
         }
@@ -166,11 +169,20 @@ p {
         .header-block {
             display: flex;
             align-items: center;
-            gap: 50px;
+            gap: 70px;
             .header-contacts {
-                font-size: 18px;
-                .header-contacts__item:not(:first-child) {
-                    margin-top: 5px;
+                display: flex;
+                gap: 40px;
+
+                &__item {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    svg {
+                        width: 1em;
+                        fill: var(--text-color);
+                    }
                 }
             }
 
@@ -178,43 +190,48 @@ p {
                 cursor: pointer;
                 position: relative;
                 z-index: 15;
-                width: 50px;
-                text-align: center;
+
+                &__main {
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+
+                    svg {
+                        width: 1em;
+                        fill: var(--text-color);
+                        transition: 0.2s;
+                    }
+                }
+
                 .header-language__items {
                     display: none;
-                    width: 50px;
                     position: absolute;
-                    top: 100%;
-                    left: 0;
                     margin-top: 5px;
-                    background-color: black;
-                    border: 1px solid var(--text-color);
-                    border-radius: 4px;
-                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                    &.open {
-                        display: block;
-                        position: absolute;
-                    }
+                    background-color: #000;
 
                     .header-language__item {
+                        border: 1px solid var(--text-color);
                         cursor: pointer;
                         padding: 8px 14px;
                         transition: background-color 0.3s ease;
 
                         &:hover {
-                            background-color: #2e2929;
+                            background-color: #131212;
+                        }
+
+                        &:not(:last-child) {
+                            border-bottom: 1px;
                         }
                     }
                 }
 
-                /* Стиль выбранного элемента */
-                .header-language__selected {
-                    cursor: pointer;
-                    padding: 8px 14px;
-                    background-color: black;
-                    border: 1px solid var(--text-color);
-                    border-radius: 4px;
-                    user-select: none;
+                &.open {
+                    .header-language__items {
+                        display: block;
+                    }
+                    svg {
+                        transform: rotateX(180deg);
+                    }
                 }
             }
         }
