--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ body.lock {
 
 h1 {
   font-size: calc(
-            30px +
-                18 *
+            29px +
+                19 *
                 ((100vw - 320px) / 1360)
         );
   font-weight: 600;
@@ -41,8 +41,8 @@ h1 {
 
 h2 {
   font-size: calc(
-            30px +
-                12 *
+            29px +
+                13 *
                 ((100vw - 320px) / 1360)
         );
   font-weight: 600;
@@ -55,6 +55,7 @@ p {
                 4 *
                 ((100vw - 320px) / 1360)
         );
+  line-height: 1.55;
 }
 
 .modal {
@@ -392,7 +393,6 @@ p {
   display: block;
 }
 .about-us .about-us-block__info-p {
-  line-height: 1.55;
   font-weight: 300;
 }
 .about-us .about-us-block__img {
@@ -417,17 +417,21 @@ p {
 .achievments-list__item {
   display: flex;
   align-items: center;
-  gap: 40px;
+  gap: calc(
+            17px +
+                13 *
+                ((100vw - 320px) / 1360)
+        );
 }
 .achievments-list__item svg {
   flex-shrink: 0;
-  width: 50px;
+  width: calc(
+            30px +
+                20 *
+                ((100vw - 320px) / 1360)
+        );
   fill: var(--text-color);
 }
-.achievments-list__item-text {
-  line-height: 2;
-}
-
 .certificats .container {
   display: flex;
   justify-content: space-between;
