--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,19 +55,20 @@ body {
 }
 
 h1 {
-    @include adaptiv-value('font-size', 48, 30, 0);
+    @include adaptiv-value('font-size', 48, 29, 0);
     font-weight: 600;
     letter-spacing: 1px;
 }
 
 h2 {
-    @include adaptiv-value('font-size', 42, 30, 0);
+    @include adaptiv-value('font-size', 42, 29, 0);
     font-weight: 600;
     margin-bottom: 50px;
 }
 
 p {
     @include adaptiv-value('font-size', 20, 16, 0);
+    line-height: 1.55;
 }
 
 .modal {
@@ -429,7 +430,6 @@ p {
             }
 
             &-p {
-                line-height: 1.55;
                 font-weight: 300;
             }
         }
@@ -458,15 +458,14 @@ p {
         &__item {
             display: flex;
             align-items: center;
-            gap: 40px;
+            @include adaptiv-value('gap', 30, 17, 0);
 
             svg {
                 flex-shrink: 0;
-                width: 50px;
+                @include adaptiv-value('width', 50, 30, 0);
                 fill: var(--text-color);
             }
             &-text {
-                line-height: 2;
             }
         }
     }
